# Tutor_BarCode11

./: .gitignore  CMakeLists.txt  License  README.md
BarCode11/: decoder_11.cpp  decoder_11.hpp  main.cpp
BarCode11.xcodeproj/: project.pbxproj
BarCode11.xcodeproj/project.xcworkspace/xcuserdata/alex.xcuserdatad/: WorkspaceSettings.xcsettings
BarCode11.xcodeproj/xcuserdata/alex.xcuserdatad/xcschemes/: xcschememanagement.plist
BarCode11/BarCode/: bar_code.cpp  bar_code.hpp  decoder.hpp  decoder_11.cpp  decoder_11.hpp
test_images/: readme.md
